--- a/pomodoro-timer-2/src/components/Main/Buttons/Button.css
+++ b/pomodoro-timer-2/src/components/Main/Buttons/Button.css
@@ -1,8 +1,16 @@
 .buttons {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .button {
-    height: 30px;
+  height: 30px;
+}
+
+.button-start,
+.button-pause,
+.button-reset {
+  background: none;
+  border: none;
+  color: white;
 }
